[package]
name = "vault_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.43", features = ["derive"] }
dirs = "6.0.0"
rand = "0.9.2"
rpassword = "7.4.0"
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
zeroize = "1.8.1"
